--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
             <div class="br-content">
                 <h4 class="br-title dark-2">Hi, I am</h4>
                 <h1 class="br-intro">Adon</h1>
-                <p class="br-con-des">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                <p class="br-con-des">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning
+                    because as to society behaved moments.</p>
                 <button class="btn-pr">Download CV</button>
                 <button class="btn-pr">Contact</button>
             </div>
@@ -35,10 +36,13 @@
             </div>
         </div>
     </header>
-    <main >
+    <main>
         <section class="ab-second-bg">
             <h3 class="sec-headings">About Me</h3>
-            <p class="sec-con">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+            <p class="sec-con">I, m a designer & developer with a passion for web design. I enjoy developing simple,
+                clean and slick websites that provide real value to the end user. Thousands of clients have procured
+                exceptional resulfs while working with me. Delivering work within time and budget which meets clients
+                requirements in our mata.</p>
             <div class="ab-items">
                 <div class="ab-item">
                     <p class="p-t">Name</p>
@@ -60,34 +64,124 @@
         </section>
         <section class="m-w">
             <h3 class="sec-headings">What I do</h3>
-            <p class="sec-con">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+            <p class="sec-con">I have more than 10 years experience building software for clients all over the world.
+                Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more
+                about my experience? Check out my online resume and project portfolio.</p>
             <br>
             <div class="skill-container">
                 <div class="skill">
                     <img src="images/icons/js.png" alt="">
                     <h4 class="skill-t">Vanilla JavaScript</h4>
-                    <p class="skill-cont">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    <p class="skill-cont">List skill/technologies here. You can change the icon above to any of the
+                        1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                 </div>
                 <div class="skill">
                     <img src="images/icons/react.png" alt="">
                     <h4 class="skill-t">React</h4>
-                    <p class="skill-cont">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    <p class="skill-cont">List skill/technologies here. You can change the icon above to any of the
+                        1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                 </div>
                 <div class="skill">
                     <img src="images/icons/nodejs.png" alt="">
                     <h4 class="skill-t">Node.js</h4>
-                    <p class="skill-cont">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    <p class="skill-cont">List skill/technologies here. You can change the icon above to any of the
+                        1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                 </div>
                 <div class="skill">
                     <img src="images/icons/mongo.png" alt="">
                     <h4 class="skill-t">MongoDB</h4>
-                    <p class="skill-cont">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    <p class="skill-cont">List skill/technologies here. You can change the icon above to any of the
+                        1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                 </div>
             </div>
         </section>
+        <section>
+            <h2 class="res-heading"> A summary of My Resume</h2>
+            <div class="resume-container">
+                <div class="resume-col">
+                    <h3 class="res-col-title">My Education</h3>
+                    <div class="exp">
+                        <h4 class="exp-title">Master in Computer Engineering</h4>
+                        <h5 class="exp-sub-title">Harvard University / 2015 - 2017</h5>
+                        <div class="exp-des">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="exp">
+                        <h4 class="exp-title">Master in Computer Engineering</h4>
+                        <h5 class="exp-sub-title">Harvard University / 2015 - 2017</h5>
+                        <div class="exp-des">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="exp">
+                        <h4 class="exp-title">Master in Computer Engineering</h4>
+                        <h5 class="exp-sub-title">Harvard University / 2015 - 2017</h5>
+                        <div class="exp-des">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </div>
+                    </div>
+                </div>
+                <div class="resume-col">
+                    <h3 class="res-col-title">My Experience</h3>
+                    <div class="exp">
+                        <h4 class="exp-title">Sr. Font End Developer</h4>
+                        <h5 class="exp-sub-title">Apple Inc / 2020 - Current</h5>
+                        <div class="exp-des">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="exp">
+                        <h4 class="exp-title">Jr. Font End Developer</h4>
+                        <h5 class="exp-sub-title">Dribbble Inc / 2018 - 2022</h5>
+                        <div class="exp-des">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="exp">
+                        <h4 class="exp-title">HTML Developer</h4>
+                        <h5 class="exp-sub-title">Adobe Inc / 2017 - 2018</h5>
+                        <div class="exp-des">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <button class="btn-pr-res">Download CV</button>
+        </section>
     </main>
     <footer>
-
+        <div class="foot-con">
+            <div class="fcfirst">
+                <h3 class="sec-headings">Lets Connect</h3>
+                <div class="footer-con">
+                    <p >Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+                    <div class="f-icons">
+                        <a href=""><img src="images/icons/facebook.png" alt=""></a>
+                        <a href=""><img src="images/icons/twitter.png" alt=""></a>
+                        <a href=""><img src="images/icons/insta.png" alt=""></a>
+                    </div>
+                </div>
+            </div>
+            <div class="fcsecond">
+                <h2 class="sec-headings">Message me</h2>
+                <div class="footer-inp">
+                    <div class="f-inp-con">
+                        <input placeholder="Your name"  type="text">
+                    <br>
+                    <input placeholder="Your email" type="email" name="" id="">
+                    </div>
+                    <br>
+                    <textarea cols="30" rows="10" name="" id="" placeholder="Message"></textarea>
+                    <input class="btn-pr inp-sub"  type="submit" value="submit">
+                </div>
+            </div>
+        </div>
+        
     </footer>
 </body>
 
