my seventh commit for icons

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="styles/port.css">
+    <script src="https://kit.fontawesome.com/46084dbc5c.js" crossorigin="anonymous"></script>
 </head>
 
 <body class="open-sans-normal">
@@ -28,8 +29,8 @@
                 <h1 class="br-intro">Adon</h1>
                 <p class="br-con-des">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning
                     because as to society behaved moments.</p>
-                <button class="btn-pr">Download CV</button>
-                <button class="btn-pr">Contact</button>
+                <button class="btn-pr"><i class="fa-solid fa-arrow-down"></i>   Download CV</button>
+                <button class="btn-pr"><i class="fa-solid fa-phone"></i>        Contact</button>
             </div>
             <div>
                 <img class="br-image" src="images/hardy.png" alt="">
@@ -151,7 +152,7 @@
                     </div>
                 </div>
             </div>
-            <button class="btn-pr-res">Download CV</button>
+            <button class="btn-pr-res"><i class="fa-solid fa-arrow-down"></i>  Download CV</button>
         </section>
     </main>
     <footer>
