added muttakir pic

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <button class="btn-pr"><i class="fa-solid fa-phone"></i>        Contact</button>
             </div>
             <div>
-                <img class="br-image" src="images/hardy.png" alt="">
+                <img class="br-image" src="images/WhatsApp_Image_2025-07-14_at_17.56.47_7c3f2b63-removebg-preview.png" alt="">
             </div>
         </div>
     </header>
